<resources>
    <string name="app_name">CodeBox</string>
    <string name="title_activity_main">CodeBox</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="cLanguage">C</string>
    <string name="cppLanguage">C++</string>
    <string name="cSharpLanguage">C#</string>
    <string name="JavaLanguage">Java</string>
    <string name="phpLanguage">PHP</string>
    <string name="objectiveCLanguage">Objective C</string>
    <string name="pythonLanguage">Python</string>
    <string name="jsLanguage">JS</string>
    <string name="javaLanguage">Java</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Registration">Registration</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="Score">Score: </string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="ok">Ok</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="total_score">Total score:</string>
    <string name="score">Score:</string>
    <string name="title_activity_top_players">TopPlayersActivity</string>
</resources>
