<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvRegister"
        style="@style/DialogTitle"
        android:layout_width="fill_parent"
        android:layout_marginBottom="@dimen/dip_5"
        android:background="@drawable/frame"
        android:text="@string/register"
        android:textColor="@color/background_white" />

    <EditText
        android:id="@+id/etUsername"
        style="@style/EditText"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/dip_10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        style="@style/EditText"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/dip_10"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/Button"
        android:layout_width="fill_parent"
        android:layout_margin="@dimen/dip_10"
        android:text="@string/ok" />
</LinearLayout>