<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accentcolor"
    tools:context="com.labas.bozidar.foi.codebox.fragments.ScoreFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvScoreBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="@color/background_white"

                android:textSize="40sp" />

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/background_white"
                android:textSize="40sp" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@color/background_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTotalScoreBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_score"
                android:textColor="@color/background_white"

                android:textSize="40sp" />

            <TextView
                android:id="@+id/tvTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/background_white"

                android:textSize="40sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ivConfirm"
            android:contentDescription="@string/ok"
            android:background="@drawable/button_edge_only"
            android:layout_marginTop="10dip"
            android:layout_gravity="center_horizontal"
            android:layout_width="50dip"
            android:layout_height="50dip"
            android:src="@drawable/ic_action"/>


    </LinearLayout>


</FrameLayout>
